# arithmetization_benchmarks

./: .gitignore  Cargo.toml  LICENSE  README.md  micro_fft.txt  micro_mekle_tree_proof_verify.txt  micro_merkle_tree_build.txt
benches/: air_benchmark.rs  fft_micro_benchmark.rs  fft_single_benchmark.rs  merkle_proof_benchmark.rs  merkle_tree_benchmark.rs  program_by_proof_system_benchmark.rs  r1cs_benchmark.rs
scripts/: gather
src/: sample_air_benchmarks.rs  sample_r1cs_benchmarks.rs  sample_r1cs_proof.rs
src/jsnark_outputs/fibonacci/: .fibonacciVerifyGadget.java.swp  fibonacciVerifyCircuitGenerator.java  fibonacciVerifyGadget.java
src/jsnark_outputs/pointer_chasing_10_iters/: ptrchasingexample_3.arith  ptrchasingexample_3.wires  ptrchasingexample_4.arith  ptrchasingexample_4.wires  ptrchasingexample_5.arith  ptrchasingexample_5.wires  ptrchasingexample_6.arith  ptrchasingexample_6.wires  ptrchasingexample_7.arith  ptrchasingexample_7.wires  ptrchasingexample_8.arith  ptrchasingexample_8.wires
src/jsnark_outputs/pointer_chasing_11_iters/: ptrchasingexample_3.arith  ptrchasingexample_3.wires  ptrchasingexample_4.arith  ptrchasingexample_4.wires  ptrchasingexample_5.arith  ptrchasingexample_5.wires  ptrchasingexample_6.arith  ptrchasingexample_6.wires  ptrchasingexample_7.arith  ptrchasingexample_7.wires  ptrchasingexample_8.arith  ptrchasingexample_8.wires
src/jsnark_outputs/pointer_chasing_12_iters/: ptrchasingexample_3.arith  ptrchasingexample_3.wires  ptrchasingexample_4.arith  ptrchasingexample_4.wires  ptrchasingexample_5.arith  ptrchasingexample_5.wires  ptrchasingexample_6.arith  ptrchasingexample_6.wires  ptrchasingexample_7.arith  ptrchasingexample_7.wires  ptrchasingexample_8.arith  ptrchasingexample_8.wires
stats/: flame-graph.html
