[package]
name = "arithmetization_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fractal-orchestrator"
path = "src/sample_r1cs_benchmarks.rs"
bench = false
doc = false
debug = 1

[[bin]]
name = "stark-orchestrator"
path = "src/sample_air_benchmarks.rs"
bench = false
doc = false
debug = 1

[features]
default = ["flame_it"]
flame_it = ["flame", "flamer", "fractal_utils/flame_it", "fractal_indexer/flame_it", "fractal_prover/flame_it", "fractal_verifier/flame_it"]

[dependencies]
criterion = "0.3"
displaydoc = "0.1.7"
flame = { version = "0.2", optional = true }
flamer = { version = "0.3", optional = true }
fractal_utils = { git = "https://github.com/Jasleen1/winter_fractal", branch = "linear_combination" }
fractal_proofs = { git = "https://github.com/Jasleen1/winter_fractal", branch = "linear_combination" }
fractal_indexer = { git = "https://github.com/Jasleen1/winter_fractal", branch = "linear_combination" }
fractal_prover = { git = "https://github.com/Jasleen1/winter_fractal", branch = "linear_combination" }
fractal_verifier = { git = "https://github.com/Jasleen1/winter_fractal", branch = "linear_combination" }
winter-models = { git = "https://github.com/Jasleen1/winter_fractal", branch = "linear_combination" }

lazy_static = "1.4.0"
log = { version = "0.4", default-features = false }
#models = { version = "0.1.0", path = "../winter_fractal/models", package = "winter-models", default-features = false }
regex = "1"
serde = { version = "1.0.117", features = ["derive"] }
sscanf = "0.1.4"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.22"
winter-crypto = "0.4.0"
winter-fri = "0.4.0"
winter-math = "0.4.0"
winter-utils = "0.4.0"
winter-rand-utils = "0.4.0"
winter-air = "0.4.0"
winterfell = "0.4.0"
examples = {git = "https://github.com/Jasleen1/winterfell", branch = "fft"}

[[bench]]
name = "r1cs_benchmark"
harness = false

[[bench]]
name = "air_benchmark"
harness = false

[[bench]]
name = "fft_single_benchmark"
harness = false

[[bench]]
name = "merkle_tree_benchmark"
harness = false